[package]
name = "mlg"
version = "1.0.0"
edition = "2024"
description = "Mathlingua command-line interface"

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
lalrpop-util = "0.23.1"
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
