[package]
name = "mlg"
version = "0.1.0"
edition = "2024"
description = "Mathlingua command-line interface"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }
