[package]
name = "mlg"
version = "1.0.0"
edition = "2024"
description = "Mathlingua command-line interface"

[build-dependencies]
lalrpop = "0.23.1"

# Internal-only tooling. `syn` is used by the syntax-doc generator
# (`tools/syntax_docs/`, run via `cargo run --example gen_syntax_docs`) to read the
# AST/parser sources. It is a dev-dependency so it never enters the shipped `mlg`
# binary's dependency graph.
[dev-dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "parsing", "printing", "visit"] }

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.28"
lalrpop-util = "0.23.1"
logos = "0.16.1"
lsp-server = "0.7"
lsp-types = "0.95"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
